pkg/front_end/testcases/inference/constructors_too_many_positional_arguments.dart.strong.transformed.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/constructors_too_many_positional_arguments.dart:10:54: Error: Too many positional arguments: 0 allowed, but 1 found.
// Try removing the extra positional arguments.
//   var a = new A /*error:EXTRA_POSITIONAL_ARGUMENTS*/ (42);
//                                                      ^
// pkg/front_end/testcases/inference/constructors_too_many_positional_arguments.dart:7:7: Context: The class 'A' has a constructor that takes no arguments.
// class A<T> {}
//       ^
//
import self as self;
import "dart:core" as core;

class A<T extends core::Object? = dynamic> extends core::Object {
  synthetic constructor •() → self::A<self::A::T%>
    : super core::Object::•()
    ;
}
static method test() → dynamic {
  invalid-type a = invalid-expression "pkg/front_end/testcases/inference/constructors_too_many_positional_arguments.dart:10:54: Error: Too many positional arguments: 0 allowed, but 1 found.
Try removing the extra positional arguments.
  var a = new A /*error:EXTRA_POSITIONAL_ARGUMENTS*/ (42);
                                                     ^";
}
static method main() → dynamic {}
